RESOLVED FIXED 80804
Layout Test fast/table/table-row-compositing-repaint-crash.html is failing
https://bugs.webkit.org/show_bug.cgi?id=80804
Summary Layout Test fast/table/table-row-compositing-repaint-crash.html is failing
Fumitoshi Ukai
Reported 2012-03-11 19:23:55 PDT
The following layout test is failing on chromium debug fast/table/table-row-compositing-repaint-crash.html Probable cause: http://trac.webkit.org/log/?verbose=on&rev=110401&stop_rev=110400, possibly http://trac.webkit.org/changeset/110401/ http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=fast%2Ftable%2Ftable-row-compositing-repaint-crash.html&showExpectations=true ASSERTION FAILED: parent() Backtrace: WebKit::WebNode::hasChildNodes [0x0208FBF0+8250817] WebKit::WebNode::hasChildNodes [0x01F7C4AA+7122555] WebKit::WebNode::hasChildNodes [0x01F714DD+7077550] WebKit::WebNode::hasChildNodes [0x01F71847+7078424] WebKit::WebNode::hasChildNodes [0x01F8FB93+7202148] WebKit::WebNode::hasChildNodes [0x01FC9B41+7439634] WebKit::WebNode::hasChildNodes [0x01FAB238+7314441] WebKit::WebNode::hasChildNodes [0x0208F2F3+8248516] WebKit::WebNode::hasChildNodes [0x01F68CBF+7042704] WebKit::WebNode::hasChildNodes [0x01F686C5+7041174] WebKit::WebNode::hasChildNodes [0x02D77933+21783300] WebKit::WebNode::hasChildNodes [0x02D77B48+21783833] WebKit::WebNode::hasChildNodes [0x02CC99DE+21070767] WebKit::WebNode::hasChildNodes [0x02C746C8+20721817] WebKit::WebNode::hasChildNodes [0x02B07A63+19227700] WebKit::WebNode::hasChildNodes [0x02B078AD+19227262] WebKit::WebNode::hasChildNodes [0x02AC728A+18963547] WebKit::WebNode::hasChildNodes [0x02AC6FCD+18962846] WebKit::WebNode::hasChildNodes [0x02A67C0E+18572767] WebKit::WebNode::hasChildNodes [0x02A6745F+18570800] WebKit::WebNode::hasChildNodes [0x02A68532+18575107] WebKit::WebNode::hasChildNodes [0x02D5F9C3+21685140] WebKit::WebNode::hasChildNodes [0x02275728+10240249] WebKit::WebNode::hasChildNodes [0x02260C0A+10155483] WebKit::WebNode::hasChildNodes [0x01A03FB2+1386883] WebKit::WebNode::hasChildNodes [0x019559A4+672629] WebKit::WebNode::hasChildNodes [0x02260A8D+10155102] WebKit::WebNode::hasChildNodes [0x02260D26+10155767] WebKit::WebNode::hasChildNodes [0x025E5FCA+13846939] WebKit::WebNode::hasChildNodes [0x025DE59F+13815664] WebKit::WebNode::hasChildNodes [0x025E7463+13852212] WebKit::WebNode::hasChildNodes [0x025DF04E+13818399] WebKit::WebNode::hasChildNodes [0x01A1B453+1482276] webkit::npapi::PluginGroup::InitFrom [0x0863CA5F+903335] (No symbol) [0x00500F54] (No symbol) [0x00508D40] (No symbol) [0x005089D7] (No symbol) [0x0050845F] base::win::EnumVariant::QueryInterface [0x00AEC41F+322226] base::win::EnumVariant::QueryInterface [0x00AF419F+354354] base::win::EnumVariant::QueryInterface [0x00AF4423+354998] base::win::EnumVariant::QueryInterface [0x00AF52C6+358745] base::win::EnumVariant::QueryInterface [0x00B16DE4+496759] base::win::EnumVariant::QueryInterface [0x00B16412+494245] base::win::EnumVariant::QueryInterface [0x00AEEE7C+333071] base::win::EnumVariant::QueryInterface [0x00AF3D8A+353309] base::win::EnumVariant::QueryInterface [0x00AF3ADE+352625] base::win::EnumVariant::QueryInterface [0x00AF2DC0+349267] (No symbol) [0x004E120D] (No symbol) [0x00412719] (No symbol) [0x00483B9B] (No symbol) [0x0044DBB5] (No symbol) [0x0044CB60] (No symbol) [0x004FAE38] (No symbol) [0x004FAC7F] RegisterWaitForInputIdle [0x7C817077+73] LEAK: 2076 WebCoreNode LEAK: 45 CachedResource LEAK: 1 Page LEAK: 1 Frame LEAK: 9 RenderObject ASSERTION FAILED: parent() third_party/WebKit/Source/WebCore/rendering/RenderTableRow.cpp(184) : virtual WebCore::LayoutRect WebCore::RenderTableRow::clippedOverflowRectForRepaint(WebCore::RenderBoxModelObject*) const 1 0x195f1a4 2 0x18eb145 3 0x190e4d9 4 0x190e73b 5 0x18fdc7b 6 0x18a1a9e 7 0x18895f4 8 0x195e7a6 9 0x193249b 10 0x1931db7 11 0x72207b 12 0x722332 13 0x70177d 14 0x6d9641 15 0x10620ac 16 0x10622f9 17 0x100ff25 18 0x100fd57 19 0xff8308 20 0xff7cc9 21 0xff8930 22 0x1f1c644 23 0x150aa2c 24 0x14fbc50 25 0x4994ec 26 0x4f8f77 27 0x14fbb12 28 0x14fbd0a 29 0x1530de7 30 0x1544a5f 31 0x1532336 [42738:42738:17028963938353:ERROR:process_util_posix.cc(142)] Received signal 11 base::debug::StackTrace::StackTrace() [0x84c78e] base::(anonymous namespace)::StackDumpSignalHandler() [0x806371] 0x7ff869fceaf0 WebCore::RenderTableRow::clippedOverflowRectForRepaint() [0x195f1ae] WebCore::RenderLayer::computeRepaintRects() [0x18eb145] WebCore::RenderLayerCompositor::updateBacking() [0x190e4d9] WebCore::RenderLayerCompositor::updateLayerCompositingState() [0x190e73b] WebCore::RenderLayer::styleChanged() [0x18fdc7b] WebCore::RenderBoxModelObject::styleDidChange() [0x18a1a9e] WebCore::RenderBox::styleDidChange() [0x18895f4] WebCore::RenderTableRow::styleDidChange() [0x195e7a6] WebCore::RenderObject::setStyle() [0x193249b] WebCore::RenderObject::setAnimatableStyle() [0x1931db7] WebCore::NodeRendererFactory::createRenderer() [0x72207b] WebCore::NodeRendererFactory::createRendererIfNeeded() [0x722332] WebCore::Node::createRendererIfNeeded() [0x70177d] WebCore::Element::attach() [0x6d9641] WebCore::executeTask() [0x10620ac] WebCore::HTMLConstructionSite::executeQueuedTasks() [0x10622f9] WebCore::HTMLTreeBuilder::constructTreeFromAtomicToken() [0x100ff25] WebCore::HTMLTreeBuilder::constructTreeFromToken() [0x100fd57] WebCore::HTMLDocumentParser::pumpTokenizer() [0xff8308] WebCore::HTMLDocumentParser::pumpTokenizerIfPossible() [0xff7cc9] WebCore::HTMLDocumentParser::append() [0xff8930] WebCore::DecodedDataDocumentParser::appendBytes() [0x1f1c644] WebCore::DocumentWriter::addData() [0x150aa2c] WebCore::DocumentLoader::commitData() [0x14fbc50] WebKit::WebFrameImpl::commitDocumentData() [0x4994ec] WebKit::FrameLoaderClientImpl::committedLoad() [0x4f8f77] WebCore::DocumentLoader::receivedData() [0x14fbd0a] WebCore::MainResourceLoader::addData() [0x1530de7] WebCore::ResourceLoader::didReceiveData() [0x1544a5f] WebCore::MainResourceLoader::didReceiveData() [0x1532336] WebCore::ResourceLoader::didReceiveData() [0x1545382] WebCore::ResourceHandleInternal::didReceiveData() [0x50fe72] webkit_glue::WebURLLoaderImpl::Context::OnReceivedData() [0x1ded6ca] (anonymous namespace)::RequestProxy::NotifyReceivedData() [0x1ed893a] base::internal::RunnableAdapter<>::Run() [0x1edef03] base::internal::InvokeHelper<>::MakeItSo() [0x1ede92e] base::internal::Invoker<>::Run() [0x1ede254] base::Callback<>::Run() [0x7c370b] MessageLoop::RunTask() [0x7deb8c] MessageLoop::DeferOrRunPendingTask() [0x7deca3] MessageLoop::DoWork() [0x7df4c5] base::MessagePumpGlib::HandleDispatch() [0x83dbd3] (anonymous namespace)::WorkSourceDispatch() [0x83d11f] 0x7ff86fa038c2 0x7ff86fa07748 0x7ff86fa078fc base::MessagePumpGlib::RunWithDispatcher() [0x83d882] base::MessagePumpGlib::Run() [0x83dcb0] MessageLoop::RunInternal() [0x7de853] MessageLoop::RunHandler() [0x7de706] MessageLoop::Run() [0x7de03b] webkit_support::RunMessageLoop() [0x6314e4] TestShell::waitTestFinished() [0x471b66] TestShell::runFileTest() [0x46a3db] runTest() [0x433834] main [0x43433b] 0x7ff869fb9c4d 0x41fb49 None Process: DumpRenderTree [2952] Path: /b/build/slave/Webkit_Mac10_5__dbg__2_/build/src/xcodebuild/Debug/DumpRenderTree.app/Contents/MacOS/DumpRenderTree Identifier: DumpRenderTree Version: ??? (???) Code Type: X86 (Native) Parent Process: python [1603] Date/Time: 2012-03-10 06:40:18.957 -0800 OS Version: Mac OS X 10.5.8 (9L31a) Report Version: 6 Anonymous UUID: 7BD660DB-E8BE-4B0E-80C8-AB523315A42F Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_PROTECTION_FAILURE at 0x00000000bf3504f3 Crashed Thread: 0 Thread 0 Crashed: 0 ??? 0xbf3504f3 0 + 3207922931 1 DumpRenderTree 0x33ab7db3 webkit::npapi::PluginInstance::NPP_SetWindow(_NPWindow*) + 515 2 DumpRenderTree 0x33af288d webkit::npapi::WebPluginDelegateImpl::WindowlessSetWindow() + 349 3 DumpRenderTree 0x33af475f webkit::npapi::WebPluginDelegateImpl::WindowlessUpdateGeometry(gfx::Rect const&, gfx::Rect const&) + 655 4 DumpRenderTree 0x33aef94b webkit::npapi::WebPluginDelegateImpl::UpdateGeometry(gfx::Rect const&, gfx::Rect const&) + 139 5 DumpRenderTree 0x33afc929 webkit::npapi::WebPluginImpl::updateGeometry(WebKit::WebRect const&, WebKit::WebRect const&, WebKit::WebVector<WebKit::WebRect> const&, bool) + 857 6 DumpRenderTree 0x33afcc1a non-virtual thunk to webkit::npapi::WebPluginImpl::updateGeometry(WebKit::WebRect const&, WebKit::WebRect const&, WebKit::WebVector<WebKit::WebRect> const&, bool) + 90 7 DumpRenderTree 0x301257c5 WebKit::WebPluginContainerImpl::reportGeometry() + 341 8 DumpRenderTree 0x30123d18 WebKit::WebPluginContainerImpl::setFrameRect(WebCore::IntRect const&) + 88 9 DumpRenderTree 0x330c6421 WebCore::RenderWidget::setWidgetGeometry(WebCore::IntRect const&) + 321 10 DumpRenderTree 0x330c66c0 WebCore::RenderWidget::updateWidgetGeometry() + 496 11 DumpRenderTree 0x330c7854 WebCore::RenderWidget::updateWidgetPosition() + 100 12 DumpRenderTree 0x330aef15 WebCore::RenderView::updateWidgetPositions() + 117 13 DumpRenderTree 0x32c4cbaa WebCore::FrameView::performPostLayoutTasks() + 570 14 DumpRenderTree 0x32c4c6d7 WebCore::FrameView::layout(bool) + 4455 15 DumpRenderTree 0x3036d12c WebCore::Document::updateLayout() + 316 16 DumpRenderTree 0x3036d2d0 WebCore::Document::updateLayoutIgnorePendingStylesheets() + 240 17 DumpRenderTree 0x303f1d58 WebCore::Element::scrollHeight() + 56 18 DumpRenderTree 0x300d4467 WebKit::WebFrameImpl::documentElementScrollHeight() const + 135 19 DumpRenderTree 0x2ffee741 WebViewHost::didUpdateLayout() + 129 20 DumpRenderTree 0x2ffee78c non-virtual thunk to WebViewHost::didUpdateLayout() + 28 21 DumpRenderTree 0x30160c29 WebKit::WebViewImpl::layoutUpdated(WebKit::WebFrameImpl*) + 393 22 DumpRenderTree 0x3002613a WebKit::ChromeClientImpl::layoutUpdated(WebCore::Frame*) const + 74 23 DumpRenderTree 0x32c4c8be WebCore::FrameView::layout(bool) + 4942 24 DumpRenderTree 0x3036caf6 WebCore::Document::implicitClose() + 1046 25 DumpRenderTree 0x32b11522 WebCore::FrameLoader::checkCallImplicitClose() + 178 26 DumpRenderTree 0x32b1122e WebCore::FrameLoader::checkCompleted() + 366 27 DumpRenderTree 0x32b0fc6e WebCore::FrameLoader::finishedParsing() + 190 28 DumpRenderTree 0x3037aa7a WebCore::Document::finishedParsing() + 634 29 DumpRenderTree 0x31ed98bf WebCore::HTMLTreeBuilder::finished() + 175 30 DumpRenderTree 0x31e9ebf8 WebCore::HTMLDocumentParser::end() + 264 31 DumpRenderTree 0x31e9d976 WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd() + 310 32 DumpRenderTree 0x31e9d6d1 WebCore::HTMLDocumentParser::prepareToStopParsing() + 305 33 DumpRenderTree 0x31e9ec75 WebCore::HTMLDocumentParser::attemptToEnd() + 85 34 DumpRenderTree 0x31e9ecf9 WebCore::HTMLDocumentParser::finish() + 89 35 DumpRenderTree 0x32b035b1 WebCore::DocumentWriter::endIfNotLoadingMainResource() + 289 36 DumpRenderTree 0x32b02a23 WebCore::DocumentWriter::end() + 67 37 DumpRenderTree 0x32ae7cb2 WebCore::DocumentLoader::finishedLoading() + 114 38 DumpRenderTree 0x32b1b525 WebCore::FrameLoader::finishedLoading() + 101 39 DumpRenderTree 0x32b3b99b WebCore::MainResourceLoader::didFinishLoading(double) + 315 40 DumpRenderTree 0x32b5c662 WebCore::ResourceLoader::didFinishLoading(WebCore::ResourceHandle*, double) + 210 41 DumpRenderTree 0x3008cfa3 WebCore::ResourceHandleInternal::didFinishLoading(WebKit::WebURLLoader*, double) + 275 42 DumpRenderTree 0x33b3c9df webkit_glue::WebURLLoaderImpl::Context::OnCompletedRequest(net::URLRequestStatus const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, base::TimeTicks const&) + 1071 43 DumpRenderTree 0x33cbe7ad (anonymous namespace)::RequestProxy::NotifyCompletedRequest(net::URLRequestStatus const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, base::TimeTicks const&) + 109 44 DumpRenderTree 0x33cbefd5 base::internal::RunnableAdapter<void ((anonymous namespace)::RequestProxy::*)(net::URLRequestStatus const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, base::TimeTicks const&)>::Run((anonymous namespace)::RequestProxy*, net::URLRequestStatus const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, base::TimeTicks const&) + 213 45 DumpRenderTree 0x33cbeed6 base::internal::InvokeHelper<false, void, base::internal::RunnableAdapter<void ((anonymous namespace)::RequestProxy::*)(net::URLRequestStatus const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, base::TimeTicks const&)>, void ()((anonymous namespace)::RequestProxy* const&, net::URLRequestStatus const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, base::TimeTicks const&)>::MakeItSo(base::internal::RunnableAdapter<void ((anonymous namespace)::RequestProxy::*)(net::URLRequestStatus const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, base::TimeTicks const&)>, (anonymous namespace)::RequestProxy* const&, net::URLRequestStatus const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, base::TimeTicks const&) + 150 46 DumpRenderTree 0x33cbee15 base::internal::Invoker<4, base::internal::BindState<base::internal::RunnableAdapter<void ((anonymous namespace)::RequestProxy::*)(net::URLRequestStatus const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, base::TimeTicks const&)>, void ()((anonymous namespace)::RequestProxy*, net::URLRequestStatus const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, base::TimeTicks const&), void ()((anonymous namespace)::RequestProxy*, net::URLRequestStatus, std::basic_string<char, std::char_traits<char>, std::allocator<char> >, base::TimeTicks)>, void ()((anonymous namespace)::RequestProxy*, net::URLRequestStatus const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, base::TimeTicks const&)>::Run(base::internal::BindStateBase*) + 229 47 DumpRenderTree 0x3077a09b base::Callback<void ()()>::Run() const + 75 48 DumpRenderTree 0x307777be MessageLoop::RunTask(base::PendingTask const&) + 846 49 DumpRenderTree 0x30777b61 MessageLoop::DeferOrRunPendingTask(base::PendingTask const&) + 97 50 DumpRenderTree 0x30777d98 MessageLoop::DoWork() + 312 51 DumpRenderTree 0x306eb41b base::MessagePumpCFRunLoopBase::RunWork() + 107 52 DumpRenderTree 0x306eab12 base::MessagePumpCFRunLoopBase::RunWorkSource(void*) + 50 53 com.apple.CoreFoundation 0x92fae3c5 CFRunLoopRunSpecific + 3141 54 com.apple.CoreFoundation 0x92faeaa8 CFRunLoopRunInMode + 88 55 com.apple.HIToolbox 0x948562ac RunCurrentEventLoopInMode + 283 56 com.apple.HIToolbox 0x948560c5 ReceiveNextEventCommon + 374 57 com.apple.HIToolbox 0x94855f39 BlockUntilNextEventMatchingListInMode + 106 58 com.apple.AppKit 0x9139d6d5 _DPSNextEvent + 657 59 com.apple.AppKit 0x9139cf88 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 128 60 com.apple.AppKit 0x91395f9f -[NSApplication run] + 795 61 DumpRenderTree 0x306ec13e base::MessagePumpNSApplication::DoRun(base::MessagePump::Delegate*) + 350 62 DumpRenderTree 0x306eb10d base::MessagePumpCFRunLoopBase::Run(base::MessagePump::Delegate*) + 189 63 DumpRenderTree 0x30777123 MessageLoop::RunInternal() + 291 64 DumpRenderTree 0x3077643b MessageLoop::RunHandler() + 43 65 DumpRenderTree 0x30776380 MessageLoop::Run() + 64 66 DumpRenderTree 0x302f6697 webkit_support::RunMessageLoop() + 39 67 DumpRenderTree 0x2ffe1232 TestShell::waitTestFinished() + 386 68 DumpRenderTree 0x2ffd217f TestShell::runFileTest(TestParams const&) + 975 69 DumpRenderTree 0x2ff82853 __ZL7runTestR9TestShellR10TestParamsRKSsb + 1395 70 DumpRenderTree 0x2ff8211e main + 3694 71 DumpRenderTree 0x2ff60f86 start + 54
Attachments
Patch (1.74 KB, patch)
2012-03-11 21:30 PDT, Shawn Singh
no flags
Patch (3.14 KB, patch)
2012-03-12 11:00 PDT, Shawn Singh
simon.fraser: review+
Shawn Singh
Comment 1 2012-03-11 21:30:10 PDT
Shawn Singh
Comment 2 2012-03-12 10:41:38 PDT
*** Bug 80833 has been marked as a duplicate of this bug. ***
Shawn Singh
Comment 3 2012-03-12 10:42:07 PDT
Comment on attachment 131276 [details] Patch Sorry for the noise, no need to review yet. I'll need to change test expectations while fixing this.
Shawn Singh
Comment 4 2012-03-12 11:00:30 PDT
Created attachment 131352 [details] Patch fix with changes to test expectations
Shawn Singh
Comment 5 2012-03-12 12:25:17 PDT
Note You need to log in before you can comment on or make changes to this bug.