Fix regression on fast/table/table-row-compositing-repaint-crash.html https://bugs.webkit.org/show_bug.cgi?id=80804

Reviewed by Simon Fraser.

Covered by existing tests.

http://trac.webkit.org/changeset/110401/ accidentally caused
fast/table/table-row-compositing-repaint-crash.html to fail.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateBacking):

Canonical link: https://commits.webkit.org/98044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110456 268f45cc-cd09-0410-ab3c-d52691b4dbfc